# dorea-lab

./: Cargo.toml  Dioxus.toml
src/: comp.rs  database.rs  main.rs  storage.rs
src/assets/: app.js
src/components/: dashboard.rs  navbar.rs
src/lang/: en.rs  mod.rs  zh_cn.rs
