[package]
name = "dorea-cli"
version = "0.1.0"
authors = ["{{authors}}"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

dioxus = { git = "https://github.com/dioxuslabs/dioxus", features = ["desktop"] }
fermi = { git = "https://github.com/dioxuslabs/fermi" }
dioxus-heroicons = "0.1.0"

dorea-wsc = { path = "./packages/client" }
doson = "0.1.5"

tokio = { version = "1.16.1", features = ["full"] }
anyhow = "1.0.53"
serde = { version = "1.0.131", features = ["derive"] }
serde_json = "1.0"
log = "0.4.6"
regex = "1"
phf = { version = "0.10", features = ["macros"] }
chrono = "0.4.19"

[patch.crates-io]
dioxus = { git = 'https://github.com/dioxuslabs/dioxus' }